--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-rvplugin-md",
-  "version": "0.6.7",
+  "version": "0.7.0",
   "description": "Markdown for Vite",
   "keywords": [
     "vite",
@@ -45,6 +45,7 @@
     "@types/markdown-it": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "bumpp": "^6.0.6",
+    "cross-env": "^7.0.3",
     "eslint": "^7.25.0",
     "eslint-plugin-jest": "^24.3.6",
     "git-ensure": "^0.1.0",
